--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'jp.wasabeef:blurry:2.1.1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.android.volley:volley:1.1.0'
 }
