--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".SplashScreen"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
@@ -28,7 +31,8 @@
         <activity
             android:name=".FullscreenViewPager"
             android:screenOrientation="landscape" />
-        <activity android:name=".Go" />
+        <activity android:name=".Go"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Events" />
         <activity android:name=".Places" />
         <activity android:name=".ListPlaces" />
@@ -37,6 +41,10 @@
             android:name=".FullscreenImage"
             android:screenOrientation="landscape" />
         <activity android:name=".Info" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
