--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".SplashScreen"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
@@ -31,8 +30,9 @@
         <activity
             android:name=".FullscreenViewPager"
             android:screenOrientation="landscape" />
-        <activity android:name=".Go"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".Go"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Events" />
         <activity android:name=".Places" />
         <activity android:name=".ListPlaces" />
@@ -45,7 +45,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -60,7 +59,11 @@
             android:exported="true" />
         <service
             android:name=".SingleLinkParseDataIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
+        <service
+            android:name=".ReadDatabaseService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
