--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.darko.stravel"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
     implementation 'com.r0adkll:slidableactivity:2.0.6'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
